# Manga-OCR

./: .gitignore  .init_pipeline.sh.swp  .test.py.swp  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  detectLetters  detectLetters.cpp  detect_text.cpp  init_pipeline.sh  kernel.py~  test.py
Part 2: Text Post-Processing/: test2.txt  test_196-199.txt
Part 2: Text Post-Processing/Dictionaries/: frequency.txt
Part 3: Advanced Feature Recognition/: detect.py
text_processing/: dragon-ball-196.txt  kernel.py  scraper.py  scraper.txt  test.py  test.txt
text_processing/Dictionaries/: google-10000-english.txt
